@startuml
'https://plantuml.com/class-diagram

class main

class RoundHole {
    + RoundHole(radius : double)
    + getRadius() : double
    + fits(roundPeg : RoundPeg) : bool

    - _radius : double
}

main *--> "1" RoundHole : roundHole
RoundHole ..> "1" RoundPeg

class RoundPeg {
    + RoundPeg(radius : double)
    + getRadius() : double
    # updateRadius(radius : double) : void

    - _radius : double
}

main *--> "1" RoundPeg : roundPeg

class SquarePeg {
    + SquarePeg(sideLength : double)
    + getSideLength() : double

    - double _sideLength;
}

main *--> "2" SquarePeg : squarePegSmall\nsquarePegLarge

class SquareToRoundPegAdapter {
    + SquareToRoundPegAdapter(squarePegAdaptee : SquarePeg)
    + getRadius() : double
}

hide SquareToRoundPegAdapter fields

main *--> "2" SquareToRoundPegAdapter : squareToRoundPegAdapter\nsquareToRoundPegAdapterLarge
SquareToRoundPegAdapter --|> RoundPeg
SquareToRoundPegAdapter --|> SquarePeg

@enduml
